vlib/v/parser/tests/generic_symbol_err.out
vlib/v/parser/tests/generic_symbol_err.vv:1:13: error: The generic symbol `<>` is obsolete, please replace it with `[]`
    1 | pub fn what1<A>(params ...A) {
      |             ^
    2 |    println(params)
    3 | }
